# Live555ForAndroid

./: CMakeLists.txt  README
BasicUsageEnvironment/: CMakeLists.txt
UsageEnvironment/: CMakeLists.txt
groupsock/: CMakeLists.txt
liveMedia/: CMakeLists.txt
mediaServer/: CMakeLists.txt
